2010-01-17 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-polar-view.c:
    Applied patch 2930342 from Charles Suprin AA1VS.

    * src/predict-tools.c:
    Applied patch 2933879 from Charles Suprin AA1VS.


2010-01-13 Alexandru Csete <oz9aec at gmail.com>

    * src/print-pass.[ch]:
    Added files with functions to print a satellite pass using Gtk+ printing
    API. Only single pass for now.

    * src/sat-pass-dialogs.c:
    Enable Print button in single pass dialog.


2010-01-11 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rot-knob.c:
    Applied patch 2929816: Fixes Bound Checking in gtk-rot-knob.c
    Thanks Charles Suprin AA1VS.

    * src/gtk-sat-module-popup.c:
    Change menu item to "Exit full screen" and someminor cleaning.


2010-01-05 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-map-c:
    Added shadow under satellite markers and labels to improve visual
    appearance on light background (e.g. South Pole). Added missing 3px room
    between satellite label and marker.

    * src/config-keys.h:
    * src/sat-cfg.[ch]:
    * src/sat-pref-map-view.c:
    Added config parameter for shadow transparency on the GtkSatMap.


2010-01-04 Alexandru Csete <oz9aec at gmail.com>

    * src/main.c:
    Added command line options for cleaning TLE and transponder data.


2010-01-02 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.[ch]:
    Added utility function to retrieve newest EPOCH of satellites in database.


2009-12-26 Alexandru Csete <oz9aec at gmail.com>

    * src/sat-pref-layout.c:
    Finished implementation of layout selector.

    * src/pass-to-txt.c:
    Fixed bug 2914679: Unable to save Future passes.


2009-12-25 Alexandru Csete <oz9aec at gmail.com>

    * pixmaps/icons:
    Added thumbnails for predefined layouts.


2009-12-24 Alexandru Csete <oz9aec at gmail.com>

    * data/satdata:
    * data/trsp:
    Added TLE and transponder data for XW-1 / HO-68.

